base/src/test/resources/failure/tyck/want-but-no.aya.txt
In file $FILE:1:19 ->

  1 | def test : Type => \ x => x
                         ^------^

Error: Want: pi type
       Got: Type
       Normalized: Type
       Because we want to type a term such as: λ x ⇒ x
What are you doing?
